jkcfg/shimmerjs/generated/cluster/kdk12/kdk12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdk12
  namespace: kdk12
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
  selector:
    app.kubernetes.io/name: kdk12
